--- a/src/styles/components/top-navbar.css
+++ b/src/styles/components/top-navbar.css
@@ -1,12 +1,12 @@
 @utility top-navbar {
-    /* layout and positioning */
+    /* Layout and positioning */
     @apply fixed top-0 left-0 w-full h-nav z-[1000];
     @apply flex justify-between;
 
-    /* color */
+    /* Color */
     @apply bg-sencha-green;
 
-    /* effects */
+    /* Effects */
     @apply transition-shadow duration-300 ease-in-out;
 }
 
@@ -16,7 +16,12 @@
 }
 
 @utility top-navbar-list {
-    /* layout and positioning. Note that we're not using gap-x-6 anymore because it's more difficult to change the gap for just one
+    /* Layout and positioning. Note that we're not using gap-x-6 anymore because it's more difficult to change the gap for just one
        list item using gap in Tailwind. Instead, use space-x. */
     @apply flex items-center space-x-10 mr-5;
+}
+
+@utility top-navbar-list-item {
+    /* Layout and positioning. Relative so we can absolutely position underlines and they will not move nav items. */
+    @apply relative;
 }
